# PaperDebate-Agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  agent.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: architecture.md  roadmap.md
src/paperdebate_agent/: __init__.py  cli.py  schemas.py  search.py
src/paperdebate_agent/agents/: __init__.py  debate.py
src/paperdebate_agent/io/: reports.py
src/paperdebate_agent/pipelines/: run.py
src/paperdebate_agent/retrieval/: __init__.py  ranker.py
tests/: test_pipeline.py  test_search_and_ranker.py
